--- a/styles.css
+++ b/styles.css
@@ -153,3 +153,16 @@ body{
     }
     
 }
+
+@media screen and (max-width: 390px){
+    .title{
+        font-size: 35px;
+        margin-top: 100px;
+    }
+
+    .options{
+        width: 100px;
+        height: 100px;
+    }
+    
+}
